Resolved text-align issue in directory

--- a/directory/static/css/style.css
+++ b/directory/static/css/style.css
@@ -37,14 +37,6 @@ footer {
 
 /* directory */
 
-.emplooyee_title{
-    font-size: 1em;
-}
-
-.hired_language{
-    font-size: 1em;
-}
-
 .employee_image {
     height: auto;
     width: auto;
